[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/CharInfo.gd" type="Script" id=1]
[ext_resource path="res://Characters/CharIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Content/Fonts/Characters/Character_name_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Content/UI/ProgressBar/blood_red_bar.png" type="Texture" id=4]
[ext_resource path="res://Content/Fonts/Building/Building_Text.tres" type="DynamicFont" id=5]
[ext_resource path="res://Content/Fonts/Building/Building_LevelUp.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 595, 182 )

[node name="CharInfo" type="Control"]
margin_right = 1190.0
margin_bottom = 365.0
rect_min_size = Vector2( 1190, 365 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1190.0
margin_bottom = 365.0
mouse_filter = 2
color = Color( 0.87451, 0.819608, 0.45098, 1 )

[node name="CharIcon" parent="." instance=ExtResource( 2 )]
position = Vector2( 850, 21.718 )

[node name="PanelContainer" type="ScrollContainer" parent="."]
margin_left = 13.0
margin_top = 16.0
margin_right = 836.0
margin_bottom = 122.0
mouse_filter = 2
scroll_vertical_enabled = false

[node name="NameLabel" type="Label" parent="PanelContainer"]
margin_right = 1112.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jon \"dragonslayer\" Snow"

[node name="Expbar" type="TextureProgress" parent="."]
margin_left = 8.56802
margin_top = 309.0
margin_right = 797.568
margin_bottom = 349.0
mouse_filter = 2
value = 25.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="EXPLabel" type="Label" parent="Expbar"]
margin_left = 43.025
margin_top = -34.5375
margin_right = 133.025
margin_bottom = 7.46252
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXP: "

[node name="EXPAmount" type="Label" parent="Expbar"]
margin_left = 130.025
margin_top = -34.5375
margin_right = 220.025
margin_bottom = 7.46252
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100/400"

[node name="LevelLabel" type="Label" parent="."]
margin_left = 71.9894
margin_top = 135.712
margin_right = 230.989
margin_bottom = 192.712
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level: "

[node name="LevelAmount" type="Label" parent="."]
margin_left = 223.989
margin_top = 135.712
margin_right = 382.989
margin_bottom = 192.712
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 596.166, 181.143 )
shape = SubResource( 1 )
[connection signal="mouse_clicked" from="CharIcon" to="." method="_on_CharIcon_mouse_clicked"]
[connection signal="mouse_entered" from="CharIcon" to="." method="_on_CharIcon_mouse_entered"]
[connection signal="mouse_left" from="CharIcon" to="." method="_on_CharIcon_mouse_left"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
